kubernetes/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: tun
              mountPath: /dev/net/tun
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media
          nfs:
            server: ${NAS_IP}
            path: ${NAS_DATA_PATH}/media
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
